k8s/incident-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-service
  namespace: sre-copilot
  labels:
    app: incident-service
    component: backend
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: incident-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port:   "8081"
        prometheus.io/path:   "/actuator/prometheus"
    spec:
      containers:
        - name: incident-service
          image: docker.io/ramanred/sre-copilot-incident-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "200Mi"
              cpu:    "100m"
            limits:
              memory: "512Mi"
              cpu:    "500m"
          readinessProbe:
            httpGet:
              path: /api/v1/incidents/health
              port: 8081
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: incident-service
  namespace: sre-copilot
  labels:
    app: incident-service
spec:
  selector:
    app: incident-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  type: ClusterIP
